[tool.poetry]
name = "image-to-story"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.11.0"
python-dotenv = "^1.0.0"
opencv-python = "^4.8.1.78"
google-search-results = "^2.4.2"
transformers = "^4.41.1"
torch = "^2.3.0"
torchvision = "^0.22.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
